--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fjalor</title>
-    <link rel="stylesheet" href="./src/style.css"/>
+    <link rel="stylesheet" href="./style.css"/>
 </head>
 <body>
     <div id="game">
-        <!-- <div class="grid">
+         <div class="grid">
             <div class="box"></div>
             <div class="box"></div>
             <div class="box"></div>
             <div class="box"></div>
             <div class="box"></div>
-        </div> -->
+        </div> 
     </div>
     <script src="./src/index.js" type="module"></script>
 </body>
